foto atualizada de perfil

--- a/portifolio_lenara_talaviitz.html
+++ b/portifolio_lenara_talaviitz.html
@@ -18,7 +18,7 @@
 
         <h1>LENARA TALAVITZ</h1>
         <span class="img-container">
-          <img class="foto"  src="img/perfilprofissional.png" alt="foto de perfil">
+          <img class="foto"  src="img/foto_perfil_atualizado.jpeg" alt="foto de perfil">
         </span>
         
 
